--- a/net/yunapbx/Makefile
+++ b/net/yunapbx/Makefile
@@ -8,7 +8,7 @@ PKG_SOURCE:=$(PKG_NAME).tar.gz
 PKG_SOURCE_VERSION:=HEAD
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
-PKG_INSTALL:=0
+PKG_INSTALL:=
 
 include $(INCLUDE_DIR)/package.mk
 
