--- a/net/yunapbx/Makefile
+++ b/net/yunapbx/Makefile
@@ -7,7 +7,7 @@ PKG_SOURCE_URL:=git://github.com/dzavy/yunapbx.git
 PKG_SOURCE:=$(PKG_NAME).tar.gz
 PKG_SOURCE_VERSION:=HEAD
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
 PKG_INSTALL:=
 
 include $(INCLUDE_DIR)/package.mk
