--- a/net/yunapbx/Makefile
+++ b/net/yunapbx/Makefile
@@ -32,11 +32,11 @@ endef
 
 define Package/yunapbx-webui/install
 	$(INSTALL_DIR) $(1)/www
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/admin $(1)/www/
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/include $(1)/www/
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/lib $(1)/www/
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/static $(1)/www/
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/user $(1)/www/
+	cp -pR $(PKG_BUILD_DIR)/admin $(1)/www/
+	cp -pR $(PKG_BUILD_DIR)/include $(1)/www/
+	cp -pR $(PKG_BUILD_DIR)/lib $(1)/www/
+	cp -pR $(PKG_BUILD_DIR)/static $(1)/www/
+	cp -pR $(PKG_BUILD_DIR)/user $(1)/www/
 endef
 
 $(eval $(call BuildPackage,yunapbx-webui))
