--- a/utils/sscep/Makefile
+++ b/utils/sscep/Makefile
@@ -5,7 +5,7 @@ PKG_VERSION:=v0.6.1
 PKG_RELEASE:=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://github.com/certnanny/sscep/archive/$(PKG_NAME)/
+PKG_SOURCE_URL:=https://github.com/certnanny/$(PKG_NAME)/archive/
 PKG_INSTALL:=
 
 include $(INCLUDE_DIR)/package.mk
