--- a/libs/mysql-connector-odbc/Makefile
+++ b/libs/mysql-connector-odbc/Makefile
@@ -1,3 +1,10 @@
+#
+# Copyright (C) 2010-2014 OpenWrt.org
+#
+# This is free software, licensed under the GNU General Public License v2.
+# See /LICENSE for more information.
+#
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mysql-connector-odbc
@@ -7,6 +14,8 @@ PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=http://dev.mysql.com/get/Downloads/Connector-ODBC/5.1/
 PKG_INSTALL:=1
+
+PKG_MAINTAINER:=Jan Havelka <dzavy@dzavy.net>
 
 EXTRA_CFLAGS:=-lpthread
 CMAKE_OPTIONS:=-DWITH_UNIXODBC=1 -DMYSQL_INCLUDE_DIR=$(STAGING_DIR)/usr/include/mysql -DODBC_INCLUDES=$(STAGING_DIR)/usr/include -DMYSQLCLIENT_LIB_NAME=libmysqlclient_r.so.16 -DMYSQL_LIB_DIR=$(STAGING_DIR)/usr/lib -DODBC_LIB_DIR=$(STAGING_DIR)/usr/lib
