fixed dir structure

--- a/libs/phonenumber-php/Makefile
+++ b/libs/phonenumber-php/Makefile
@@ -37,8 +37,8 @@ define Build/Compile
 endef
 
 define Package/phonenumber-php/install
-	$(INSTALL_DIR) $(1)/usr/share/
-	cp -pR $(PKG_BUILD_DIR)/src/libphonenumber $(1)/usr/share/
+	$(INSTALL_DIR) $(1)/usr/share/php/
+	cp -pR $(PKG_BUILD_DIR)/src/libphonenumber $(1)/usr/share/php/
 endef
 
 $(eval $(call BuildPackage,phonenumber-php))
