--- a/net/yunapbx/Makefile
+++ b/net/yunapbx/Makefile
@@ -8,8 +8,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=yunapbx
-PKG_VERSION:=0.2-alpha
-PKG_RELEASE:=3
+PKG_VERSION:=0.3-alpha
+PKG_RELEASE:=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=v$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://github.com/dzavy/$(PKG_NAME)/archive/
@@ -38,17 +38,19 @@ define Build/Compile
 endef
 
 define Package/yunapbx/install
+	$(INSTALL_DIR) $(1)/etc
 	$(INSTALL_DIR) $(1)/www
 	$(INSTALL_DIR) $(1)/usr/share/yunapbx
-	cp -pR $(PKG_BUILD_DIR)/admin $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/favicon.ico $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/generator $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/include $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/index.php $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/lib $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/static $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/user $(1)/www/
-	cp -pR $(PKG_BUILD_DIR)/sql $(1)/usr/share/yunapbx
+	$(CP) $(PKG_BUILD_DIR)/admin $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/favicon.ico $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/generator $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/include $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/index.php $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/lib $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/static $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/user $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/db $(1)/usr/share/yunapbx
+	$(CP) $(PKG_BUILD_DIR)/config/* $(1)/etc
 endef
 
 $(eval $(call BuildPackage,yunapbx))
