--- a/net/yunapbx-appliance/Makefile
+++ b/net/yunapbx-appliance/Makefile
@@ -29,6 +29,10 @@ define Package/yunapbx-appliance/description
   YunaPBX Appliance
 endef
 
+define Build/Prepare
+	ln -s ./image_files $(TOPDIR)/files
+endef
+
 define Build/Configure
 endef
 
@@ -42,8 +46,6 @@ define Package/yunapbx-appliance/install
 	$(CP) ./package_files/etc/crontabs/* $(1)/etc/crontabs/
 	$(INSTALL_BIN) ./package_files/etc/rc.d/* $(1)/etc/rc.d/
 	$(INSTALL_BIN) ./package_files/usr/sbin/* $(1)/usr/sbin/
-	ln -s ./image_files $(TOPDIR)/files
-
 endef
 
 $(eval $(call BuildPackage,yunapbx-appliance))
