--- a/net/yunapbx-appliance-fx130/Makefile
+++ b/net/yunapbx-appliance-fx130/Makefile
@@ -23,7 +23,7 @@ define Package/yunapbx-appliance-fx130
 	CATEGORY:=Utilities
 	SUBMENU:=Telephony
 	TITLE:=YunaPBX for Dell FX130
-	DEPENDS:=+yunapbx-appliance +kmod-cpufreq-powersaver +kmod-hwmon-via-cputemp
+	DEPENDS:=+yunapbx-appliance +kmod-cpufreq-powersaver +kmod-hwmon-via-cputemp +kmod-crypto-hw-padlock +kmod-r8169 +kmod-button-hotplug +kmod-acpi-button
 endef
 
 define Package/yunapbx-appliance-fx130/description
