fixed user permissions and logging

--- a/net/yunapbx-appliance/image_files/etc/my.cnf
+++ b/net/yunapbx-appliance/image_files/etc/my.cnf
@@ -4,7 +4,7 @@ socket                  = /var/run/mysqld.sock
 default-character-set	= utf8
 
 [mysqld]
-user                    = root
+user                    = mysql
 socket                  = /var/run/mysqld.sock
 pid_file                = /var/run/mysqld.pid
 log_error               = /var/log/mysqld.log
