--- a/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
+++ b/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
@@ -4,7 +4,7 @@
 ############ GENERAL PARAMETERS #################
 
 # We do not need PidFile with procd
-# PidFile=/var/run/zabbix_agentd.pid
+PidFile=/var/run/zabbix_agentd.pid
 
 ### Option: LogFile
 #       Name of log file.
@@ -221,7 +221,7 @@ ServerActive=37.157.198.138
 #
 # Mandatory: no
 # Default:
-AllowRoot=1
+AllowRoot=0
 
 ### Option: User
 #       Drop privileges to a specific, existing user on the system.
@@ -229,7 +229,7 @@ AllowRoot=1
 #
 # Mandatory: no
 # Default:
-# User=zabbix
+User=zabbix
 
 ### Option: Include
 #       You may include individual files or all files in a directory in the configuration file.
@@ -241,7 +241,7 @@ AllowRoot=1
 
 # Include=/usr/local/etc/zabbix_agentd.userparams.conf
 # Include=/usr/local/etc/zabbix_agentd.conf.d/*.conf
-Include=/etc/zabbix_agentd.conf.d/
+# Include=/etc/zabbix_agentd.conf.d/
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
