--- a/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -3,7 +3,7 @@ server.port                    = "8080"
 server.modules                 = ( )
 server.document-root           = "/www"
 server.upload-dirs             = ( "/tmp" )
-server.errorlog                = "/var/log/lighttpd/error.log"
+server.errorlog                = "/var/log/lighttpd.log"
 server.pid-file                = "/var/run/lighttpd.pid"
 server.username                = "http"
 server.groupname               = "www-data"
@@ -11,4 +11,4 @@ index-file.names               = ( "index.php", "index.html", "index.htm" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
 include                        "/etc/lighttpd/mime.conf"
-include_shell                  "cat /etc/lighttpd/conf.d/*.conf"
+include                        "/etc/lighttpd/conf.d/30-cgi.conf"
