--- a/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
+++ b/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
@@ -51,7 +51,6 @@ DebugLevel=2
 # Mandatory: no
 # Default:
 # EnableRemoteCommands=0
-EnableRemoteCommands=1
 
 ### Option: LogRemoteCommands
 #       Enable logging of executed shell commands as warnings.
@@ -72,7 +71,6 @@ EnableRemoteCommands=1
 # Mandatory: no
 # Default:
 # Server=
-Server=37.157.198.138
 
 ### Option: ListenPort
 #       Agent will listen on this port for connections from the server.
@@ -98,7 +96,7 @@ Server=37.157.198.138
 # Range: 0-100
 # Default:
 # StartAgents=3
-StartAgents=1
+StartAgents=0
 
 ##### Active checks related
 
@@ -112,7 +110,7 @@ StartAgents=1
 #
 # Mandatory: no
 # Default:
-ServerActive=37.157.198.138
+ServerActive=zabbix.yunapbx.uk
 
 ### Option: Hostname
 #       Unique, case sensitive hostname.
