--- a/net/yunapbx-appliance/image_files/etc/my.cnf
+++ b/net/yunapbx-appliance/image_files/etc/my.cnf
@@ -7,7 +7,7 @@ default-character-set	= utf8
 user                    = mysql
 socket                  = /var/run/mysqld.sock
 pid_file                = /var/run/mysqld.pid
-log_error               = /var/log/mysqld.log
+log_error               = /var/log/mysql/mysqld.log
 port                    = 3306
 basedir                 = /usr
 datadir                 = /data/mysql/
