fix logging and permissions for lighttpd

--- a/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -3,7 +3,7 @@ server.port                    = "8080"
 server.modules                 = ( )
 server.document-root           = "/www"
 server.upload-dirs             = ( "/tmp" )
-server.errorlog                = "/var/log/lighttpd.log"
+server.errorlog-use-syslog     = "enable"
 server.pid-file                = "/var/run/lighttpd.pid"
 server.username                = "http"
 server.groupname               = "www-data"
