enable syslog for asterisk

--- a/net/yunapbx-appliance/image_files/etc/asterisk/logger.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/logger.conf
@@ -8,5 +8,5 @@
 ;security = security
 console = notice,warning,error
 ;console = notice,warning,error,debug
-messages = warning,error
+syslog.daemon = warning,error
 ;full = notice,warning,error,debug,verbose,dtmf,fax
