--- a/net/yunapbx-appliance/image_files/etc/haproxy.cfg
+++ b/net/yunapbx-appliance/image_files/etc/haproxy.cfg
@@ -1,10 +1,8 @@
 global
-    maxconn 32000
-    ulimit-n 65535
-    uid 34
-    gid 34
+    user haproxy
+    group haproxy
     daemon
-    nosplice
+    log /dev/log daemon
 
 defaults
     mode http
