disable queue_log

--- a/net/yunapbx-appliance/image_files/etc/asterisk/logger.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/logger.conf
@@ -1,12 +1,6 @@
 [general]
-;queue_log = no
-;queue_log_to_file = yes
-;rotatestrategy = rotate
+queue_log = no
 
 [logfiles]
-;debug = debug
-;security = security
 console = notice,warning,error
-;console = notice,warning,error,debug
-syslog.daemon = warning,error
-;full = notice,warning,error,debug,verbose,dtmf,fax
+syslog.kern = warning,error
