fix folders and permissions

--- a/net/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
@@ -1,13 +1,18 @@
-[directories](!)
+[files]
+astctlpermissions = 700
+astctlowner = asterisk
+astctlgroup = asterisk
+astctl = /var/run/asterisk.ctl
+
+[directories]
 astetcdir = /etc/asterisk
-astmoddir = /usr/lib/asterisk/modules
+astdatadir = /usr/lib/asterisk
 astvarlibdir = /usr/lib/asterisk
 astdbdir = /usr/lib/asterisk
 astkeydir = /usr/lib/asterisk
-astdatadir = /usr/lib/asterisk
 astagidir = /usr/lib/asterisk/agi-bin
 astspooldir = /var/spool/asterisk
-astrundir = /var/run/asterisk
+astrundir = /var/run
 astlogdir = /var/log/asterisk
 astsbindir = /usr/sbin
 
@@ -88,15 +93,3 @@ live_dangerously = no           ; Enable the execution of 'dangerous' dialplan
                                 ; considered dangerous because they can allow
                                 ; privilege escalation.
                                 ; Default yes, for backward compatability.
-
-; Changing the following lines may compromise your security.
-;[files]
-;astctlpermissions = 0660
-;astctlowner = root
-;astctlgroup = apache
-;astctl = asterisk.ctl
-
-[compat]
-pbx_realtime=1.6
-res_agi=1.6
-app_set=1.6
