new asterisk+xmpp integration

--- a/net/yunapbx-appliance/image_files/etc/asterisk/xmpp.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/xmpp.conf
@@ -1,11 +1,11 @@
 [general]
 
 [prosody]
-type = client
+type = component
 serverhost = localhost
-;pubsub_node = pubsub.astjab.org
-username = asterisk@localhost/asterisk
+username = asterisk.localhost
 secret = asterisk
 usetls = no
+port = 5347
 ;sendtodialplan = yes
 ;context = messages
