--- a/net/yunapbx-appliance/image_files/etc/haproxy.cfg
+++ b/net/yunapbx-appliance/image_files/etc/haproxy.cfg
@@ -21,21 +21,18 @@ frontend public
 
     redirect scheme https if !{ ssl_fc }
 
-    bind :443 ssl crt /data/ssl/server.keycrt
-    bind :::443 ssl crt /data/ssl/server.keycrt
+    bind :443 ssl crt /tmp/ssl/haproxy.crt
+    bind :::443 ssl crt /tmp/ssl/haproxy.crt
 
     use_backend asterisk if { path_beg /ws }
     use_backend prosody if { path_beg /http-bind }
     default_backend lighttpd
 
 backend asterisk
-    #source 0.0.0.0 usesrc clientip
     server asterisk1 127.0.0.1:8089 ssl verify none
 
 backend prosody
-    reqadd X-Forwarded-Proto:\ https
-    server prosody1 127.0.0.1:5280 check
+    server prosody1 127.0.0.1:5280
 
 backend lighttpd
-    #source 0.0.0.0 usesrc clientip
     server lighttpd1 127.0.0.1:8080
