rename group www-data -> http

--- a/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -6,7 +6,7 @@ server.upload-dirs             = ( "/tmp" )
 server.errorlog-use-syslog     = "enable"
 server.pid-file                = "/var/run/lighttpd.pid"
 server.username                = "http"
-server.groupname               = "www-data"
+server.groupname               = "http"
 index-file.names               = ( "index.php", "index.html", "index.htm" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
