run as asterisk:yunapbx, change monitor path to /data/monitor

--- a/net/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
@@ -5,7 +5,7 @@ astvarlibdir = /usr/lib/asterisk
 astdbdir = /usr/lib/asterisk
 astkeydir = /usr/lib/asterisk
 astagidir = /usr/lib/asterisk/agi-bin
-astspooldir = /var/spool/asterisk
+astspooldir = /data
 astrundir = /var/run
 astlogdir = /var/log/asterisk
 astsbindir = /usr/sbin
@@ -13,11 +13,11 @@ astsbindir = /usr/sbin
 [files]
 astctlpermissions = 700
 astctlowner = asterisk
-astctlgroup = asterisk
+astctlgroup = yunapbx
 astctl = asterisk.ctl
 
 [options]
 runuser = asterisk
-rungroup = asterisk
+rungroup = yunapbx
 hideconnect = yes
 live_dangerously = no
