--- a/net/yunapbx-appliance/image_files/etc/asterisk/modules.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/modules.conf
@@ -1,6 +1,6 @@
 [modules]
-autoload=yes
+autoload = yes
 
-noload => cdr_adaptive_odbc.so
-noload => cdr_custom.so
-noload => cdr_syslog.so.so
+noload = cdr_adaptive_odbc.so
+noload = cdr_custom.so
+noload = cdr_syslog.so
