mysql via socket only

--- a/net/yunapbx-appliance/image_files/etc/my.cnf
+++ b/net/yunapbx-appliance/image_files/etc/my.cnf
@@ -13,7 +13,7 @@ basedir                 = /usr
 datadir                 = /data/mysql/
 tmpdir                  = /tmp/
 skip-external-locking   = true
-bind-address            = 127.0.0.1
+skip-networking
 event_scheduler         = on
 default-character-set	= utf8
 
