change paths to mysql and asterisk sockets

--- a/net/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
@@ -6,7 +6,7 @@ astdbdir = /usr/lib/asterisk
 astkeydir = /usr/lib/asterisk
 astagidir = /usr/lib/asterisk/agi-bin
 astspooldir = /data
-astrundir = /var/run
+astrundir = /var/run/asterisk
 astlogdir = /var/log/asterisk
 astsbindir = /usr/sbin
 
