--- a/net/yunapbx-appliance/image_files/etc/my.cnf
+++ b/net/yunapbx-appliance/image_files/etc/my.cnf
@@ -1,12 +1,12 @@
 [client]
 port                    = 3306
-socket                  = /var/run/mysqld.sock
+socket                  = /var/run/mysql/mysqld.sock
 default-character-set	= utf8
 
 [mysqld]
 user                    = mysql
-socket                  = /var/run/mysqld.sock
-pid_file                = /var/run/mysqld.pid
+socket                  = /var/run/mysql/mysqld.sock
+pid_file                = /var/run/mysql/mysqld.pid
 log_error               = /var/log/mysql/mysqld.log
 port                    = 3306
 basedir                 = /usr
