--- a/net/yunapbx-appliance/image_files/etc/odbc.ini
+++ b/net/yunapbx-appliance/image_files/etc/odbc.ini
@@ -3,4 +3,4 @@ Driver       = /usr/lib/libmyodbc5.so
 Server       = localhost
 User         = root
 Database     = yunapbx
-Socket       = /var/run/mysqld.sock
+Socket       = /var/run/mysql/mysqld.sock
