--- a/net/yunapbx-appliance/image_files/etc/php.ini
+++ b/net/yunapbx-appliance/image_files/etc/php.ini
@@ -135,7 +135,7 @@ mysql.default_user =
 mysql.default_password =
 mysql.connect_timeout = 60
 mysql.trace_mode = Off
-mysqli.default_socket = /var/run/mysqld.sock
+mysqli.default_socket = /var/run/mysql/mysqld.sock
 
 [Session]
 session.save_handler = files
