--- a/net/yunapbx-appliance/image_files/etc/haproxy.cfg
+++ b/net/yunapbx-appliance/image_files/etc/haproxy.cfg
@@ -21,8 +21,8 @@ frontend public
 
     redirect scheme https if !{ ssl_fc }
 
-    bind :443 ssl crt /tmp/ssl/haproxy.crt
-    bind :::443 ssl crt /tmp/ssl/haproxy.crt
+    bind :443 ssl crt /var/ssl/haproxy.crt
+    bind :::443 ssl crt /var/ssl/haproxy.crt
 
     use_backend asterisk if { path_beg /ws }
     use_backend prosody if { path_beg /http-bind }
