--- a/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
+++ b/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
@@ -1,7 +1,7 @@
-PidFile=/var/run/zabbix_agentd.pid
-DebugLevel=2
-EnableRemoteCommands=1
-StartAgents=0
-ServerActive=zabbix.yunapbx.uk
-AllowRoot=0
-User=zabbix
+PidFile = /var/run/zabbix_agentd.pid
+DebugLevel = 2
+EnableRemoteCommands = 1
+StartAgents = 0
+ServerActive = zabbix.yunapbx.uk
+AllowRoot = 0
+User = zabbix
