advertise as YunaPBX

--- a/net/yunapbx-appliance/image_files/etc/asterisk/sip.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/sip.conf
@@ -20,5 +20,8 @@ callcounter = yes
 accept_outofcall_message = yes
 outofcall_message_context = messages
 auth_message_requests = yes
+useragent = YunaPBX 1.0
+sdpsession = YunaPBX 1.0
+sdpowner = yuna
 
 #include /var/yunapbx/sip.conf
