--- a/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -7,6 +7,7 @@ server.errorlog-use-syslog     = "enable"
 server.pid-file                = "/var/run/lighttpd.pid"
 server.username                = "http"
 server.groupname               = "yunapbx"
+server.tag                     = "lighttpd"
 index-file.names               = ( "index.php", "index.html", "index.htm" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
