--- a/net/yunapbx-appliance/image_files/etc/openvpn/client.conf
+++ b/net/yunapbx-appliance/image_files/etc/openvpn/client.conf
@@ -5,10 +5,10 @@ persist-tun
 ca /etc/openvpn/ca.crt
 cert /var/ssl/openvpn.crt
 key /var/ssl/openvpn.key
-comp-lzo yes
+comp-lzo no
 dev tun
-proto udp
-remote eleonora.dzavy.net 1194
+proto tcp
+remote vpn.yunapbx.uk 1194
 resolv-retry infinite
 user nobody
 verb 3
