fix /var/run permissions

--- a/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
+++ b/net/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
@@ -1,4 +1,4 @@
-PidFile = /var/run/zabbix_agentd.pid
+PidFile = /var/run/zabbix/zabbix_agentd.pid
 LogType = system
 DebugLevel = 2
 EnableRemoteCommands = 1
