--- a/libs/libphonenumber/Makefile
+++ b/libs/libphonenumber/Makefile
@@ -8,10 +8,10 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=libphonenumber
-PKG_VERSION:=7.3.1
+PKG_VERSION:=7.7.4
 PKG_RELEASE:=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE:=v$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://github.com/googlei18n/$(PKG_NAME)/archive/
 PKG_INSTALL:=1
 
@@ -20,7 +20,7 @@ PKG_MAINTAINER:=Jan Havelka <dzavy@dzavy.net>
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
 
-CMAKE_OPTIONS:=-DUSE_ICU_REGEXP=OFF -DUSE_BOOST=OFF -DGTEST_SOURCE_DIR=/home/builder/googletest_clone/googletest/googletest/ -DGTEST_INCLUDE_DIR=/home/builder/googletest_clone/googletest/googletest/include/
+CMAKE_OPTIONS:=-DUSE_ICU_REGEXP=OFF -DUSE_BOOST=OFF
 CMAKE_SOURCE_DIR:=$(PKG_BUILD_DIR)/cpp/
 
 define Package/libphonenumber
@@ -38,7 +38,7 @@ endef
 
 define Package/libphonenumber/install
 	$(INSTALL_DIR) $(1)/usr/lib
-	cp -pR $(PKG_BUILD_DIR)/lib/*.so $(1)/usr/lib/
+	cp -pR $(PKG_BUILD_DIR)/libphonenumber.so $(1)/usr/lib/
 endef
 
 $(eval $(call BuildPackage,libphonenumber))
