--- a/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/net/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -1,6 +1,6 @@
 server.bind                    = "127.0.0.1"
 server.port                    = "8080"
-server.modules                 = ( )
+server.modules                 = ( "mod_cgi", "mod_extforward" )
 server.document-root           = "/www"
 server.upload-dirs             = ( "/tmp" )
 server.errorlog-use-syslog     = "enable"
@@ -10,6 +10,6 @@ server.groupname               = "yunapbx"
 server.tag                     = "lighttpd"
 index-file.names               = ( "index.php", "index.html", "index.htm" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
+cgi.assign                     = ( ".php" => "/usr/bin/php-cgi" )
 
 include                        "/etc/lighttpd/mime.conf"
-include                        "/etc/lighttpd/conf.d/30-cgi.conf"
