--- a/net/yunapbx-appliance/image_files/etc/asterisk/http.conf
+++ b/net/yunapbx-appliance/image_files/etc/asterisk/http.conf
@@ -4,5 +4,5 @@ bindaddr = 127.0.0.1
 bindport = 8088
 tlsenable = yes
 tlsbindaddr = 127.0.0.1:8089
-tlscertfile = /tmp/ssl/asterisk.crt
-tlsprivatekey = /tmp/ssl/asterisk.key
+tlscertfile = /var/ssl/asterisk.crt
+tlsprivatekey = /var/ssl/asterisk.key
