--- a/system/yunapbx-logd/Makefile
+++ b/system/yunapbx-logd/Makefile
@@ -23,7 +23,7 @@ TARGET_LDFLAGS += $(if $(CONFIG_USE_GLIBC),-lrt)
 define Package/yunapbx-logd
   SECTION:=base
   CATEGORY:=Base system
-  DEPENDS:=!logd +libubox +libubus +libblobmsg-json +USE_GLIBC:librt
+  DEPENDS:=!PACKAGE_logd +libubox +libubus +libblobmsg-json +USE_GLIBC:librt
   TITLE:=YunaPBX system log implementation
 endef
 
