--- a/system/yunapbx-appliance/Makefile
+++ b/system/yunapbx-appliance/Makefile
@@ -26,7 +26,7 @@ define Package/yunapbx-appliance
 	DEPENDS+=+yunapbx-logd +odhcp6c +tcpdump +openssl-util +curl +lame +tune2fs +fdisk +partx-utils +sudo +block-mount +usbutils +uci +zoneinfo-core
 	DEPENDS+=+asterisk11 +asterisk11-app-confbridge +asterisk11-app-mixmonitor +asterisk11-app-queue +asterisk11-cdr +asterisk11-chan-dongle +asterisk11-chan-motif +asterisk11-codec-a-mu +asterisk11-codec-adpcm +asterisk11-codec-alaw +asterisk11-codec-g722 +asterisk11-codec-g726 +asterisk11-codec-gsm +asterisk11-codec-ilbc +asterisk11-codec-lpc10 +asterisk11-codec-resample +asterisk11-format-gsm +asterisk11-format-wav +asterisk11-format-wav-gsm +asterisk11-func-db +asterisk11-func-extstate +asterisk11-func-presencestate +asterisk11-odbc +asterisk11-res-agi +asterisk11-res-monitor +asterisk11-res-musiconhold +asterisk11-res-srtp +asterisk11-res-timing-timerfd +asterisk11-res-xmpp +asterisk11-sounds +asterisk11-voicemail
 	DEPENDS+=+kmod-usb-hid +kmod-fs-cifs +kmod-fs-msdos +kmod-fuse +kmod-cpufreq-acpi +kmod-hwmon-core +kmod-hwmon-k10temp +kmod-hwmon-coretemp +kmod-usb2 +kmod-usb2-pci +kmod-usb3 +kmod-cpufreq-powersaver +kmod-hwmon-via-cputemp +kmod-crypto-hw-padlock +kmod-r8169 +kmod-button-hotplug +kmod-acpi-button
-	DEPENDS+=+@OPENSSL_WITH_EC +@OPENSSL_WITH_EC2M +@OPENSSL_ENGINE_CRYPTO +@OPENSSL_ENGINE_DIGEST +@GNUTLS_CRYPTODEV +@LIBCURL_OPENSSL +@BUSYBOX_CUSTOM +@BUSYBOX_CONFIG_LOGIN
+	DEPENDS+=+@USE_GLIBC +@OPENSSL_WITH_EC +@OPENSSL_WITH_EC2M +@OPENSSL_ENGINE_CRYPTO +@OPENSSL_ENGINE_DIGEST +@GNUTLS_CRYPTODEV +@LIBCURL_OPENSSL +@BUSYBOX_CUSTOM +@BUSYBOX_CONFIG_LOGIN
 endef
 
 define Package/yunapbx-appliance/description
