add suport for ca-certificates/ca-bundle

--- a/system/yunapbx-appliance/image_files/etc/openvpn/client.conf
+++ b/system/yunapbx-appliance/image_files/etc/openvpn/client.conf
@@ -2,12 +2,13 @@ client
 nobind
 persist-key
 persist-tun
-ca /etc/openvpn/ca.crt
+ca /var/ssl/ca-bundle.crt
 cert /var/ssl/openvpn.crt
 key /var/ssl/openvpn.key
 dev tun
 proto tcp
 remote vpn.yunapbx.uk 1194
+verify-x509-name vpn.yunapbx.uk name
 resolv-retry infinite
 user nobody
 verb 3
