--- a/system/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
+++ b/system/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
@@ -6,3 +6,7 @@ StartAgents = 0
 ServerActive = zabbix.yunapbx.uk
 AllowRoot = 0
 User = zabbix
+#TLSConnect = cert
+#TLSCAFile = /var/ssl/ca-bundle.crt
+#TLSCertFile = /var/ssl/zabbix.crt
+#TLSKeyFile = /var/ssl/zabbix.key
