fix logging/procd script

--- a/system/yunapbx-appliance/image_files/etc/my.cnf
+++ b/system/yunapbx-appliance/image_files/etc/my.cnf
@@ -7,15 +7,14 @@ default-character-set	= utf8
 user                    = mysql
 socket                  = /var/run/mysql/mysqld.sock
 pid_file                = /var/run/mysql/mysqld.pid
-log_error               = /var/log/mysql/mysqld.log
-port                    = 3306
 basedir                 = /usr
 datadir                 = /data/mysql/
 tmpdir                  = /tmp/
 skip-external-locking   = true
 skip-networking
 event_scheduler         = on
-default-character-set	= utf8
+character-set-server    = utf8
+collation-server        = utf8_general_ci
 
 # Fine Tuning
 key_buffer              = 16M
