--- a/libs/libphonenumber/Makefile
+++ b/libs/libphonenumber/Makefile
@@ -36,9 +36,17 @@ define Package/libphonenumber/description
   Google's common C++ library for parsing, formatting, and validating international phone numbers.
 endef
 
+define Build/InstallDev
+	$(INSTALL_DIR) $(1)/usr/include
+	$(INSTALL_DIR) $(1)/usr/lib
+
+	$(CP) $(PKG_INSTALL_DIR)/usr/include/* $(1)/usr/include/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/* $(1)/usr/lib/
+endef
+
 define Package/libphonenumber/install
 	$(INSTALL_DIR) $(1)/usr/lib
-	cp -pR $(PKG_BUILD_DIR)/libphonenumber.so* $(1)/usr/lib/
+	$(CP) $(PKG_BUILD_DIR)/usr/lib/*.so.* $(1)/usr/lib/
 endef
 
 $(eval $(call BuildPackage,libphonenumber))
