--- a/libs/mysql-connector-odbc/Makefile
+++ b/libs/mysql-connector-odbc/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mysql-connector-odbc
 PKG_VERSION:=5.1.13-src
-PKG_RELEASE:=4
+PKG_RELEASE:=5
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=http://dev.mysql.com/get/Downloads/Connector-ODBC/5.1/
@@ -38,7 +38,7 @@ endef
 define Package/mysql-connector-odbc/install
 	$(INSTALL_DIR) $(1)/usr/lib
 	$(INSTALL_DIR) $(1)/usr/share/mysql/
-	$(CP) $(PKG_BUILD_DIR)/lib/libmyodbc5.so $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libmyodbc5.so $(1)/usr/lib/
 	$(CP) ./files/odbcinst.ini $(1)/usr/share/mysql/
 endef
 
