--- a/libs/libphonenumber/Makefile
+++ b/libs/libphonenumber/Makefile
@@ -46,7 +46,7 @@ endef
 
 define Package/libphonenumber/install
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_BUILD_DIR)/usr/lib/*.so.* $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/*.so.* $(1)/usr/lib/
 endef
 
 $(eval $(call BuildPackage,libphonenumber))
