configure mod_extforwarded

--- a/system/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/system/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -11,5 +11,6 @@ server.tag                     = "lighttpd"
 index-file.names               = ( "index.php", "index.html", "index.htm" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 cgi.assign                     = ( ".php" => "/usr/bin/php-cgi" )
+extforward.forwarder           = ( "127.0.0.1" => "trust" )
 
 include                        "/etc/lighttpd/mime.conf"
