--- a/system/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/system/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -8,8 +8,8 @@ server.pid-file                = "/var/run/lighttpd.pid"
 server.username                = "http"
 server.groupname               = "yunapbx"
 server.tag                     = "lighttpd"
-index-file.names               = ( "index.php", "index.html", "index.htm" )
-static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
+index-file.names               = ( "index.php" )
+static-file.exclude-extensions = ( ".php", ".tpl" )
 cgi.assign                     = ( ".php" => "/usr/bin/php-cgi" )
 extforward.forwarder           = ( "127.0.0.1" => "trust" )
 
